# data_engineering

./: .gitignore  Dockerfile  EDA.ipynb  README.md  crawler.py  data_loader.py  data_processor.py  docker-compose.yml  main.py  parser.py  pyproject.toml  requirements.txt  setup.cfg  write_to_db.py
api_example/: api_reader.py
data_retrieval/: parser.py
experiments/: main.py
link_data_retrieval/: data_loader.py  data_processor.py
parse_example/: crawler.py
src/: requirements.txt
src/etl/: __init__.py  config.py  extract.py  load.py  logger.py  main.py  transform.py  validate.py
